--- a/style.css
+++ b/style.css
@@ -6,3 +6,83 @@
 body{
     font-family: 'Rubik', sans-serif;
 }
+.list{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin-top: 15px;
+}
+.list_a2{
+    text-decoration: none;
+    font-family: 'Rubik';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 21px;
+
+color: #FF6838;
+margin-left: 15px;
+}
+.list_a{
+    text-decoration: none;
+    font-family: 'Rubik';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 21px;
+color: #363853; 
+}
+.up{
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFFFFF;
+    background: #FF7A50;
+    box-shadow: 0px 22px 40px rgba(255, 104, 56, 0.19);
+    border-radius: 5px;
+    padding: 14px 20px;
+    border: none;
+}
+.buy{
+   margin-left: 20px;
+   margin-top: 15px;
+}
+.search{
+    margin-left: 30px;
+    margin-top: 15px;
+}
+.super{
+font-weight: 500;
+font-size: 66px;
+margin-top: 200px;
+}
+.exploreDiv{
+    display: flex;
+    align-items: flex-end;
+}
+.download{
+    margin-left: 20px;
+}
+.down_a{
+    color: #363853;
+    font-weight: 400;
+    font-size: 17px;
+}
+.explore{
+    border: none;
+    background: #FF7A50;
+    box-shadow: 0px 22px 40px rgba(255, 104, 56, 0.19);
+    border-radius: 5px;
+    padding: 12px 20px;
+    color: #FFFFFF;
+    font-weight: 400;
+    font-size: 20px;
+}
+.webProvide{
+font-weight: 400;
+font-size: 20px;
+margin-bottom: 30px;
+color: #363853;
+}
+.superS{
+    color: orangered;
+}
