--- a/style.css
+++ b/style.css
@@ -86,3 +86,48 @@ color: #363853;
 .superS{
     color: orangered;
 }
+.moto{
+    margin-top: 100px;
+    width:600px;
+    height: 600px;
+}
+.popular{
+margin-top: 30px;
+font-weight: 500;
+font-size: 36px;
+color: #363853;
+text-align: center;
+}
+.popularS{
+   color: #FF7A50;
+}
+/* ======================================================== */
+.bigCart{
+background: #FF7A50;
+box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
+border-radius: 8px;
+display: flex;
+align-items:end;
+padding-top: 10px;
+padding-bottom: 10px;
+padding-left: 30px;
+}
+.pizza{
+font-weight: 400;
+font-size: 20px;
+color: #FFFFFF;
+margin-left: 10px;;
+}
+.bigCart-2{
+    background: #bf4b24;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
+    border-radius: 8px;
+    display: flex;
+    align-items:center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+}
+#zero{
+    padding: 10px 10px 10px 10px;
+}
