--- a/style.css
+++ b/style.css
@@ -118,8 +118,8 @@ font-size: 20px;
 color: #FFFFFF;
 margin-left: 10px;;
 }
-.bigCart-2{
-    background: #bf4b24;
+/* .bigCart-2{
+    background: #786767;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
     border-radius: 8px;
     display: flex;
@@ -128,6 +128,46 @@ margin-left: 10px;;
     padding-bottom: 10px;
     padding-left: 30px;
 }
-#zero{
-    padding: 10px 10px 10px 10px;
+.bigCart-3{
+    background: #786767;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
+    border-radius: 8px;
+    display: flex;
+    align-items:center;
+} */
+/* ======================================================== */
+.chize{
+background: #ad9696;
+border-radius: 12px;
+margin-top: 20px;
+}
+.chize-1{
+padding-top: 10px;
+text-align: center;
+}
+.chase{
+margin-top: 20px;
+font-weight: 400;
+font-size: 15px;
+color: #363853;
+
+}
+.dollar{
+font-weight: 500;
+font-size: 15px;
+color: #363853;
+
+}
+.add{
+background: #FF7A50;
+border-radius: 2px;
+border: none;
+padding: 7px 13px;
+font-weight: 400;
+font-size: 15px;
+color: #FFFFFF;
+}
+/* ======================================================== */
+.var{
+    text-align: center;
 }
