--- a/style.css
+++ b/style.css
@@ -359,3 +359,10 @@ height: 24px;
 .gpsCard{
     display: flex;
 }
+.efoodF{
+margin-bottom: 20px;
+}
+.servic{
+    font-weight: 500;
+font-size: 18px;    
+}
